Simplification des états et du lien entre mainpage et autres actions